// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iframe should deep render correctly 1`] = `
<Sandbox
  url="http://unit-test.com"
>
  <MockDisplayLoader />
  <GelXIframe
    displayLoader={<MockDisplayLoader />}
    postMessage={[Function]}
    url="http://unit-test.com"
  >
    <div>
      <MockDisplayLoader />
      <div>
        mocked ver :iframe source =
        http://unit-test.com
      </div>
    </div>
  </GelXIframe>
</Sandbox>
`;

exports[`iframe should shallow render correctly  1`] = `
<React.Fragment>
  <MockDisplayLoader />
  <GelXIframe
    displayLoader={<MockDisplayLoader />}
    postMessage={[Function]}
    url="http://unit-test.com"
  />
</React.Fragment>
`;
